Wed Mar 18 05:08:43 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/GuidBuilder.h:
        * dds/DCPS/GuidBuilder.cpp:
        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/GuidUtils.h:
        * dds/DCPS/GuidUtils.cpp:
        * dds/DCPS/RepoIdBuilder.h:
        * dds/DCPS/RepoIdBuilder.cpp:
        * dds/DCPS/RepoIdConverter.h:
        * dds/DCPS/RepoIdConverter.cpp:
        * dds/DdsDcpsGuid.idl:
        * dds/DdsDcpsInfo.idl:
        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/RepoIdGenerator.h:
        * dds/InfoRepo/RepoIdGenerator.cpp:
        * performance-tests/DCPS/Distributed/src/Publication.cpp:
        * performance-tests/DCPS/Priority/Writer.cpp:
        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/FooTest3_0/SubDriver.cpp:
        * tests/DCPS/FooTest3_1/PubDriver.cpp:
        * tests/DCPS/FooTest3_1/SubDriver.cpp:
        * tests/DCPS/FooTest3_2/PubDriver.cpp:
        * tests/DCPS/FooTest3_2/SubDriver.cpp:
        * tests/DCPS/FooTest4/Writer.cpp:
        * tests/DCPS/unit/Main.cpp:
        * tests/transport/dds_comparative/PubDriver.cpp:
        * tests/transport/dds_comparative/SubDriver.cpp:
        * tests/transport/mcast_simple/PubDriver.cpp:
        * tests/transport/mcast_simple/SubDriver.cpp:
        * tests/transport/mcast_simple_n/PubDriver.cpp:
        * tests/transport/mcast_simple_n/SubDriver.cpp:
        * tests/transport/simple/PubDriver.cpp:
        * tests/transport/simple/SubDriver.cpp:
        * tests/transport/simple_bp/PubDriver.cpp: